[gd_scene load_steps=16 format=3 uid="uid://cvcswqrqa2r8g"]

[ext_resource type="Script" uid="uid://bml2dc6tmrsim" path="res://scenes/code.gd" id="1_11xo6"]
[ext_resource type="PackedScene" uid="uid://cvuef0aj7qfju" path="res://scenes/blocks/motion/go_to.tscn" id="2_g3jxj"]
[ext_resource type="PackedScene" uid="uid://bbs62m3hr166o" path="res://scenes/blocks/looks/show.tscn" id="3_b1kht"]
[ext_resource type="PackedScene" uid="uid://cfjfav082wthf" path="res://scenes/blocks/looks/hide.tscn" id="4_m65o3"]
[ext_resource type="PackedScene" uid="uid://c25m6sxsnri8n" path="res://scenes/blocks/events/when_start_clicked.tscn" id="5_mh5tr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_paw66"]
bg_color = Color(0.29803923, 0.5921569, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.13819703, 0.51593006, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l5m3w"]
bg_color = Color(0.6, 0.4, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.539689, 0.21855676, 0.9999947, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_86sgm"]
bg_color = Color(0.8117647, 0.3882353, 0.8117647, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.63513035, 0.21380863, 0.6393597, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ta43n"]
bg_color = Color(1, 0.7490196, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.74559987, 0.5551401, 3.85046e-07, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wtu8"]
bg_color = Color(1, 0.67058825, 0.09803922, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8016487, 0.52817696, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_34o2v"]
bg_color = Color(0.36078432, 0.69411767, 0.8392157, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.193129, 0.46312517, 0.57586575, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_urm1s"]
bg_color = Color(0.34901962, 0.7529412, 0.34901962, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2483832, 0.5379431, 0.24765506, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ck41a"]
bg_color = Color(0.05882353, 0.7411765, 0.54901963, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.04103248, 0.5584736, 0.41083848, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7haqv"]
bg_color = Color(1, 0.4, 0.5019608, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.99999756, 0.26577687, 0.4306127, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grad5"]
content_margin_left = 5.0
bg_color = Color(0.15294118, 0.15294118, 0.15294118, 0.6745098)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="CODE" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_11xo6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Categories" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
alignment = 1

[node name="Motion" type="Control" parent="HBoxContainer/Categories"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Categories/Motion"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="HBoxContainer/Categories/Motion/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_paw66")

[node name="Motion" type="Label" parent="HBoxContainer/Categories/Motion/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 11
text = "Motion"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Looks" type="Control" parent="HBoxContainer/Categories"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Categories/Looks"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="HBoxContainer/Categories/Looks/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_l5m3w")

[node name="Title" type="Label" parent="HBoxContainer/Categories/Looks/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 11
text = "Looks"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sound" type="Control" parent="HBoxContainer/Categories"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Categories/Sound"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="HBoxContainer/Categories/Sound/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_86sgm")

[node name="Title" type="Label" parent="HBoxContainer/Categories/Sound/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 11
text = "Sound"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Events" type="Control" parent="HBoxContainer/Categories"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Categories/Events"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="HBoxContainer/Categories/Events/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ta43n")

[node name="Title" type="Label" parent="HBoxContainer/Categories/Events/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 11
text = "Events"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="HBoxContainer/Categories"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Categories/Control"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="HBoxContainer/Categories/Control/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6wtu8")

[node name="Title" type="Label" parent="HBoxContainer/Categories/Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 11
text = "Control"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inputs" type="Control" parent="HBoxContainer/Categories"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Categories/Inputs"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="HBoxContainer/Categories/Inputs/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_34o2v")

[node name="Title" type="Label" parent="HBoxContainer/Categories/Inputs/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 11
text = "Inputs"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Math" type="Control" parent="HBoxContainer/Categories"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Categories/Math"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="HBoxContainer/Categories/Math/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_urm1s")

[node name="Title" type="Label" parent="HBoxContainer/Categories/Math/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 11
text = "Math"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Render" type="Control" parent="HBoxContainer/Categories"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Categories/Render"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="HBoxContainer/Categories/Render/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ck41a")

[node name="Title" type="Label" parent="HBoxContainer/Categories/Render/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 11
text = "Render"
horizontal_alignment = 1
vertical_alignment = 1

[node name="func" type="Control" parent="HBoxContainer/Categories"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Categories/func"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="HBoxContainer/Categories/func/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7haqv")

[node name="Title" type="Label" parent="HBoxContainer/Categories/func/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 11
text = "func"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeadZones" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Spacer" type="Control" parent="HBoxContainer/DeadZones"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Blocks" type="ScrollContainer" parent="HBoxContainer/DeadZones"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_grad5")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/DeadZones/Blocks"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="go_to" type="Control" parent="HBoxContainer/DeadZones/Blocks/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="go_to" parent="HBoxContainer/DeadZones/Blocks/VBoxContainer/go_to" instance=ExtResource("2_g3jxj")]
custom_minimum_size = Vector2(250, 50)
layout_mode = 0
offset_right = 250.0
scale = Vector2(0.7, 0.7)

[node name="show" type="Control" parent="HBoxContainer/DeadZones/Blocks/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="show" parent="HBoxContainer/DeadZones/Blocks/VBoxContainer/show" instance=ExtResource("3_b1kht")]
layout_mode = 0
scale = Vector2(0.7, 0.7)

[node name="hide" type="Control" parent="HBoxContainer/DeadZones/Blocks/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="hide" parent="HBoxContainer/DeadZones/Blocks/VBoxContainer/hide" instance=ExtResource("4_m65o3")]
layout_mode = 0
scale = Vector2(0.7, 0.7)

[node name="when_program_started" type="Control" parent="HBoxContainer/DeadZones/Blocks/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="when_program_started" parent="HBoxContainer/DeadZones/Blocks/VBoxContainer/when_program_started" instance=ExtResource("5_mh5tr")]
layout_mode = 0
scale = Vector2(0.7, 0.7)

[node name="Spacer2" type="Control" parent="HBoxContainer/DeadZones"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Workspace" type="Panel" parent="HBoxContainer"]
layout_mode = 2

[connection signal="gui_input" from="HBoxContainer/Categories/Motion" to="." method="_on_motion_gui_input"]
[connection signal="gui_input" from="HBoxContainer/DeadZones" to="." method="_on_dead_zones_gui_input"]
